    IPC server. (Masatake Iwasaki via aajisaka)

    HADOOP-11885. hadoop-dist dist-layout-stitching.sh does not work with dash.
    (wang)

    HADOOP-12104. Migrate Hadoop Pipes native build to new CMake framework
    (alanburlison via cmccabe)

    HADOOP-12036. Consolidate all of the cmake extensions in one directory
    (alanburlison via cmccabe)

  BUG FIXES

    HADOOP-11802: DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-10027. *Compressor_deflateBytesDirect passes instance instead of
    jclass to GetStaticObjectField. (Hui Zheng via cnauroth)

    HADOOP-11724. DistCp throws NPE when the target directory is root.
    (Lei Eddy Xu via Yongjun Zhang) 

    HADOOP-11760. Fix typo of javadoc in DistCp. (Brahma Reddy Battula via
    ozawa).

    HADOOP-11800. Clean up some test methods in TestCodec.java.
    (Brahma Reddy Battula via aajisaka)

    HADOOP-11811. Fix typos in hadoop-project/pom.xml and TestAccessControlList.
    (Brahma Reddy Battula via ozawa)

    HADOOP-11704. DelegationTokenAuthenticationFilter must pass ipaddress
    instead of hostname to ProxyUsers#authorize (Anubhav Dhoot via asuresh)

    HADOOP-11846 TestCertificateUtil.testCorruptPEM failing on Jenkins JDK8.
    (Larry McCay via stevel)

    HADOOP-11859. PseudoAuthenticationHandler fails with httpcomponents v4.4.
    (Eugene Koifman via jitendra)

    HADOOP-11848. Incorrect arguments to sizeof in DomainSocket.c (Malcolm
    Kavalsky via Colin P. McCabe)

    HADOOP-11861. test-patch.sh rewrite addendum patch.
    (Allen Wittenauer via cnauroth)

    HADOOP-11864. JWTRedirectAuthenticationHandler breaks java8 javadocs.
    (Larry McCay via stevel)

    HADOOP-11876. Refactor code to make it more readable, minor
    maybePrintStats bug (Zoran Dimitrijevic via raviprak)

    HADOOP-11870. [JDK8] AuthenticationFilter, CertificateUtil,